--- a/profile.html
+++ b/profile.html
@@ -7,8 +7,9 @@
     <script src="js/common.js" defer></script>
     <script type="module" src="js/profile.js"></script>
     <link rel="stylesheet" href="css/main.css" />
+    <link rel="stylesheet" href="css/profile.css" />
   </head>
-  <body>
+  <body id="profile_page">
     <header>
       <a href="index.html"><img src="img/logo.png" alt="ebook logo" /></a>
       <form id="desktop_search_form" class="search_form">
@@ -84,82 +85,88 @@
       </div>
     </header>
     <main>
-      <h1></h1>
-      <form id="profileForm" novalidate>
-        <div class="names-container">
+      <div>
+        <h1></h1>
+        <p class="membership">
+          Member since <span id="membership_date"></span>
+        </p>
+        <form id="profileForm" novalidate>
+          <div class="names-container">
+            <div>
+              <label for="first_name">First Name:</label>
+              <input
+                type="text"
+                id="first_name"
+                name="first_name"
+                required
+                minlength="2"
+                maxlength="50"
+              />
+              <span class="error" id="first_name-error"></span>
+            </div>
+            <div>
+              <label for="last_name">Last Name:</label>
+              <input
+                type="text"
+                id="last_name"
+                name="last_name"
+                required
+                minlength="2"
+                maxlength="50"
+              />
+              <span class="error" id="last_name-error"></span>
+            </div>
+          </div>
+
           <div>
-            <label for="first_name">First Name:</label>
+            <label for="email">Email:</label>
+            <input type="email" id="email" name="email" required />
+            <span class="error" id="email-error"></span>
+          </div>
+
+          <div>
+            <label for="address">Address:</label>
             <input
               type="text"
-              id="first_name"
-              name="first_name"
+              id="address"
+              name="address"
               required
-              minlength="2"
-              maxlength="50"
+              minlength="5"
+              maxlength="100"
             />
-            <span class="error" id="first_name-error"></span>
+            <span class="error" id="address-error"></span>
           </div>
+
           <div>
-            <label for="last_name">Last Name:</label>
+            <label for="phone_number">Phone Number:</label>
             <input
-              type="text"
-              id="last_name"
-              name="last_name"
+              type="tel"
+              id="phone_number"
+              name="phone_number"
               required
-              minlength="2"
-              maxlength="50"
+              pattern="[0-9]{10}"
             />
-            <span class="error" id="last_name-error"></span>
+            <span class="error" id="phone_number-error"></span>
           </div>
-        </div>
 
-        <div>
-          <label for="email">Email:</label>
-          <input type="email" id="email" name="email" required />
-          <span class="error" id="email-error"></span>
-        </div>
-
-        <div>
-          <label for="address">Address:</label>
-          <input
-            type="text"
-            id="address"
-            name="address"
-            required
-            minlength="5"
-            maxlength="100"
-          />
-          <span class="error" id="address-error"></span>
-        </div>
-
-        <div>
-          <label for="phone_number">Phone Number:</label>
-          <input
-            type="tel"
-            id="phone_number"
-            name="phone_number"
-            required
-            pattern="[0-9]{10}"
-          />
-          <span class="error" id="phone_number-error"></span>
-        </div>
-
-        <div>
-          <label for="birth_date">Birthday:</label>
-          <input type="date" id="birth_date" name="birth_date" required />
-          <span class="error" id="birth_date-error"></span>
-        </div>
-        <span class="error" id="login-error"></span>
-        <div>
-          <button type="submit">Save changes</button>
-          <p id="update-success"></p>
-        </div>
-      </form>
+          <div>
+            <label for="birth_date">Birthday:</label>
+            <input type="date" id="birth_date" name="birth_date" required />
+            <span class="error" id="birth_date-error"></span>
+          </div>
+          <span class="error" id="login-error"></span>
+          <div class="update_btn">
+            <p id="update-status"></p>
+            <button type="submit" class="btn">Save changes</button>
+          </div>
+        </form>
+      </div>
     </main>
 
     <footer>
-      <a href="index.html"><img src="img/logo.png" alt="ebook logo" /></a>
-
+      <a href="index.html"
+        ><img src="img/logo.png" alt="ebook logo" class="logo"
+      /></a>
       <p>&#169; eBooks</p>
       <div class="some_icons">
         <a href="https://www.facebook.com" target="_blank">
