--- a/discover.html
+++ b/discover.html
@@ -87,18 +87,44 @@
     </header>
     <main id="discover">
       <section class="popular-books">
-        <h1>Our Most Popular Books:</h1>
-        <div class="carousel-wrapper">
-          <div id="cards-container" class="carousel"></div>
-        </div>
+        <h1>Our Most Popular Books</h1>
+        <div id="cards-container"></div>
       </section>
+      
       <section class="popular-authors">
-        <h1>Popular Authors:</h1>
-        <div class="carousel-wrapper">
-          <div id="authors-container" class="carousel"></div>
-        </div>
+        <h1>Popular Authors</h1>
+        <div id="authors-container"></div>
       </section>
+
+    <!-- Book Card Template -->
+    <template id="book-card-template">
+      <div class="card">
+        <a href="">
+          <div class="card-content">
+            <h3></h3>
+            <p class="author"></p>
+            <p class="publishing"></p>
+            <p class="published-year"></p>
+          </div>
+          <div class="card-footer">
+            <p>More info</p>
+          </div>
+        </a>
+      </div>
+    </template>
+
+    <!-- Author Card Template -->
+    <template id="author-card-template">
+      <div class="card-author">
+        <a href="">
+          <div class="card-content-author">
+            <h3 class="author-name"></h3>
+          </div>
+        </a>
+      </div>
+    </template>
     </main>
+
     <footer>
       <a href="index.html"
         ><img src="img/logo.png" alt="ebook logo" class="logo"
