--- a/book.html
+++ b/book.html
@@ -12,7 +12,7 @@
   <body id="book_page">
     <header>
       <nav>
-        <a href="index.html"><img src="img/logo.png" alt="ebook logo" /></a>
+        <a href="index.html"><img src="img/logo.webp" alt="ebook logo" /></a>
         <form id="desktop_search_form" class="search_form">
           <label for="desktop_search_field">
             <svg
@@ -182,7 +182,7 @@
 
     <footer>
       <a href="index.html"
-        ><img src="img/logo.png" alt="ebook logo" class="logo"
+        ><img src="img/logo.webp" alt="ebook logo" class="logo"
       /></a>
       <p>&#169; eBooks</p>
       <div class="some_icons">
