--- a/discover.html
+++ b/discover.html
@@ -13,7 +13,7 @@
   <body>
     <header>
       <nav>
-        <a href="index.html"><img src="img/logo.png" alt="ebook logo" /></a>
+        <a href="index.html"><img src="img/logo.webp" alt="ebook logo" /></a>
         <form id="desktop_search_form" class="search_form">
           <label for="desktop_search_field">
             <svg
@@ -134,7 +134,7 @@
 
     <footer>
       <a href="index.html"
-        ><img src="img/logo.png" alt="ebook logo" class="logo"
+        ><img src="img/logo.webp" alt="ebook logo" class="logo"
       /></a>
       <p>&#169; eBooks</p>
       <div class="some_icons">
